--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "style-loader": "^0.13.1",
     "testem": "^1.14.2",
     "vue-loader": "^10.0.2",
+    "vue-template-compiler": "^2.1.10",
     "webpack": "^1.14.0",
     "webpack-dashboard": "^0.2.1",
     "webpack-dev-server": "^1.16.2"
@@ -55,7 +56,7 @@
     "axios": "^0.15.3",
     "k-css": "^1.0.0",
     "lodash": "^4.17.4",
-    "vue": "^2.1.9",
+    "vue": "^2.1.10",
     "vue-router": "^2.1.1",
     "vuex": "^2.1.1",
     "vuex-router-sync": "^4.1.0",
